--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
             </div>
           </div>
         </div>
-        <!-- card1 -->
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-start">
+          <!-- card1 -->
           <div class="col">
             <div class="card mb-4 rounded-3 border-0 shadow-sm">
               <div class="card-header py-3 text-center prices">
@@ -447,27 +447,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Pro</h4>
-              </div>
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title">
-                  $15<small class="text-body-secondary fw-light">/mo</small>
-                </h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>20 users included</li>
-                  <li>10 GB of storage</li>
-                  <li>Priority email support</li>
-                  <li>Help center access</li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">
-                  Get started
-                </button>
-              </div>
-            </div>
-          </div>
+          <!-- card2 -->
           <div class="col">
             <div class="card mb-4 rounded-3 border-0 shadow-sm">
               <div class="card-header py-3 text-center prices">
@@ -487,41 +467,101 @@
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i>
-                      2 Users
+                     All the features of pro plan
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i
-                      >2 Files
+                      >Account success Manager
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i>
-                      Public Share & Comments
+                      Single Sign-On (SSO)
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i
-                      >Chat Support
+                      >Co-conception pogram
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i
-                      >New income apps
+                      >Collaboration-Soon
                     </li>
                   </ul>
                 </div>
                 <div class="d-flex justify-content-center">
                   <button type="button" class="btn btn-lg rounded-3 price-btn">
-                    Signup for free
+                    Goto Business
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- card3 -->
+          <div class="col">
+            <div class="card mb-4 rounded-3 border-0 shadow-sm">
+              <div class="card-header py-3 text-center prices">
+                <h3 class="fw-medium">Business</h3>
+                <p class="text fw-medium">
+                  Unveil new superpowers and <br> join the Design Leaque
+                </p>
+                <h1 class="card-title pricing-card-title text-center">
+                  <sup class="text">$</sup> 16
+                </h1>
+              </div>
+              <div class="card-body card1 m-4 rounded-4">
+                <div class="col list">
+                  <ul class="p-0">
+                    <li>
+                      <i
+                        class="fa-solid fa-circle-check pe-4"
+                        style="color: #54bd95"
+                      ></i>
+                     All the features of pro plan
+                    </li>
+                    <li>
+                      <i
+                        class="fa-solid fa-circle-check pe-4"
+                        style="color: #54bd95"
+                      ></i
+                      >Account success Manager
+                    </li>
+                    <li>
+                      <i
+                        class="fa-solid fa-circle-check pe-4"
+                        style="color: #54bd95"
+                      ></i>
+                      Single Sign-On (SSO)
+                    </li>
+                    <li>
+                      <i
+                        class="fa-solid fa-circle-check pe-4"
+                        style="color: #54bd95"
+                      ></i
+                      >Co-conception pogram
+                    </li>
+                    <li>
+                      <i
+                        class="fa-solid fa-circle-check pe-4"
+                        style="color: #54bd95"
+                      ></i
+                      >Collaboration-Soon
+                    </li>
+                  </ul>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <button type="button" class="btn btn-lg rounded-3 price-btn">
+                    Goto Business
                   </button>
                 </div>
               </div>
