--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="row d-flex flex-column flex-md-row gap-5 gap-md-0">
           <div class="col-12 col-md-4 px-md-4">
             <!-- card1 -->
-            <div class="card border-0">
+            <div class="card cards border-0">
               <img
                 src="./images/frame1.png"
                 class="card-img-top"
@@ -267,9 +267,9 @@
               </div>
             </div>
           </div>
-          <!-- card1 -->
+          <!-- card2 -->
           <div class="col col-md-4 px-md-4">
-            <div class="card border-0">
+            <div class="card cards border-0">
               <img
                 src="./images/frame2.png"
                 class="card-img-top"
@@ -285,9 +285,9 @@
               </div>
             </div>
           </div>
-          <!-- card1 -->
+          <!-- card3 -->
           <div class="col col-md-4 px-md-4">
-            <div class="card border-0">
+            <div class="card cards border-0">
               <img
                 src="./images/frame3.png"
                 class="card-img-top"
@@ -387,8 +387,8 @@
         </div>
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-start">
           <!-- card1 -->
-          <div class="col">
-            <div class="card mb-4 rounded-3 border-0 shadow-sm">
+          <div class="col mt-lg-4">
+            <div class="card cards mb-4 rounded-4 border-0 shadow-sm">
               <div class="card-header py-3 text-center prices">
                 <h3 class="fw-medium">Free</h3>
                 <p class="text fw-medium">
@@ -449,17 +449,21 @@
           </div>
           <!-- card2 -->
           <div class="col">
-            <div class="card mb-4 rounded-3 border-0 shadow-sm">
-              <div class="card-header py-3 text-center prices">
-                <h3 class="fw-medium">Business</h3>
-                <p class="text fw-medium">
-                  Unveil new superpowers and <br> join the Design Leaque
-                </p>
+            <div class="card cards pro mb-4 rounded-4 border-0 shadow-sm position-relative">
+              <img src="./images/pro elipse.png" class="position-absolute z-1 pro-bg overflow-y-hidden rounded-end-4" width="100%" height="81%">
+              <div class="card-header text-light py-3 text-center prices z-1">
+                <h3 class="fw-medium">Pro</h3>
+                <p class=" fw-medium">Experiment the power<br>of infinite possibilities</p>
                 <h1 class="card-title pricing-card-title text-center">
-                  <sup class="text">$</sup> 16
+                  <sup>$</sup>8
                 </h1>
               </div>
-              <div class="card-body card1 m-4 rounded-4">
+              <div class="d-flex justify-content-center z-1">
+                  <button type="button" class="btn btn-lg text-light rounded-3 pro-btn">
+                    Save $50 a year
+                  </button>
+                </div>
+              <div class="card-body card1 m-4 rounded-4 z-1">
                 <div class="col list">
                   <ul class="p-0">
                     <li>
@@ -467,53 +471,54 @@
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i>
-                     All the features of pro plan
+                      4 User
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i
-                      >Account success Manager
+                      >All apps
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i>
-                      Single Sign-On (SSO)
+                      Unlimited editable exports
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i
-                      >Co-conception pogram
+                      >Folders and collaboration 
                     </li>
                     <li>
                       <i
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i
-                      >Collaboration-Soon
+                      >All incoming apps
                     </li>
                   </ul>
                 </div>
                 <div class="d-flex justify-content-center">
                   <button type="button" class="btn btn-lg rounded-3 price-btn">
-                    Goto Business
+                    Go to pro
                   </button>
                 </div>
               </div>
             </div>
           </div>
           <!-- card3 -->
-          <div class="col">
-            <div class="card mb-4 rounded-3 border-0 shadow-sm">
+          <div class="col mt-lg-4">
+            <div class="card cards mb-4 rounded-4 border-0 shadow-sm">
               <div class="card-header py-3 text-center prices">
                 <h3 class="fw-medium">Business</h3>
                 <p class="text fw-medium">
-                  Unveil new superpowers and <br> join the Design Leaque
+                  Unveil new superpowers and <br />
+                  join the Design Leaque
                 </p>
                 <h1 class="card-title pricing-card-title text-center">
                   <sup class="text">$</sup> 16
@@ -527,7 +532,7 @@
                         class="fa-solid fa-circle-check pe-4"
                         style="color: #54bd95"
                       ></i>
-                     All the features of pro plan
+                      All the features of pro plan
                     </li>
                     <li>
                       <i
